packages/fuels-macros/tests/ui/derive/parameterize/only_one_variant_element_supported.rs
use fuels_macros::Parameterize;

#[derive(Parameterize)]
enum SomeEnum {
    // problem because no elements present
    B(),
}

#[derive(Parameterize)]
enum AnotherEnum {
    A(u64, u32),
}

fn main() {}
